--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,17 @@
 streamlit
+pyttsx3
 pypdf2
-py3-tts
-simple-image-download
-pylint
-flake8
+numpy
 pandas
-faker
+pyshorteners
+requests
+qrcode
 rembg
 Pillow
-psutil
-tk
-pyperclip
-transformers
-requests
-beautifulsoup4
+faker
 lmproof
-pyttsx3
-qrcode
-pyshorteners
-opencv-python
-numpy
-pyautogui
-plyer
-win11toast
+smtplib
+psutil
+simple_image_download
+transformers
+beautifulsoup4
