--- a/scripts.yaml
+++ b/scripts.yaml
@@ -158,3 +158,65 @@ scripts:
     inputs:
       - name: Article URL
         type: text
+
+  - id: 16
+    category: Image Utilities
+    title: Image Editor
+    description: Edit images - convert, combine, resize, and apply various filters
+    output: Edited image
+    inputs:
+      - name: Image file
+        type: file
+        format: jpg, jpeg, png, webp
+      - name: Operation
+        type: select
+        options: ["Convert Format", "Combine Images", "Resize", "Flip", "Blur", "Add Shadow", "Crop", "Adjust Brightness", "Add Watermark", "Rotate"]
+      - name: Format
+        type: text
+        visible_if: "Operation=Convert Format"
+      - name: Second Image
+        type: file
+        format: jpg, jpeg, png, webp
+        visible_if: "Operation=Combine Images"
+      - name: New Width
+        type: number
+        visible_if: "Operation=Resize"
+      - name: New Height
+        type: number
+        visible_if: "Operation=Resize"
+      - name: Direction
+        type: select
+        options: ["Horizontal", "Vertical"]
+        visible_if: "Operation=Flip"
+      - name: Blur Radius
+        type: number
+        min: 0
+        max: 10
+        step: 1
+        value: 2
+        visible_if: "Operation=Blur"
+      - name: Left
+        type: number
+        visible_if: "Operation=Crop"
+      - name: Upper
+        type: number
+        visible_if: "Operation=Crop"
+      - name: Right
+        type: number
+        visible_if: "Operation=Crop"
+      - name: Lower
+        type: number
+        visible_if: "Operation=Crop"
+      - name: Brightness
+        type: slider
+        min: 0.1
+        max: 3.0
+        step: 0.1
+        value: 1.0
+        visible_if: "Operation=Adjust Brightness"
+      - name: Watermark Text
+        type: text
+        visible_if: "Operation=Add Watermark"
+      - name: Angle
+        type: number
+        visible_if: "Operation=Rotate"
